# ai-support-triage-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: agent.py  main.py  mock_external_services.py  models.py  rag_service.py  tools.py
data/: customers.json  system_status.json
scripts/: setup_mock_data.py
